test/integration/semantic/operations22.pal
{19,21,22,23,24,26}
{
    Test that operations work
}
program test(input, output);
const
	foo = 'Party time aafter 415!!';
	bar = 'Shorter string';
type
	colour = (red,green,blue);
var
	i : integer;
	b : boolean;
	r : real;
	c : colour;
begin
	// equality
	
	b := b < i;	// error
	b := b < b;
	b := b < r;	// error
	b := b < c;	// error
	b := b < foo;	// error
	b := b < bar;	// error
	
	i := i < i;	// error
end.
